--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     "async": "^3.2.1",
     "bfx-facs-base": "git+https://github.com/bitfinexcom/bfx-facs-base.git",
     "debug": "^4.3.4",
-    "fastify": "^4.21.0",
-    "lodash": "^4.17.21"
+    "fastify": "^4.21.0"
   },
   "engine": {
     "node": ">=8.0"
