add base static functionality

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bitfinex"
   ],
   "dependencies": {
+    "@fastify/static": "^6.10.2",
     "async": "^3.2.1",
     "bfx-facs-base": "git+https://github.com/bitfinexcom/bfx-facs-base.git",
     "debug": "^4.3.4",
